--- a/css/admin-dash.css
+++ b/css/admin-dash.css
@@ -5,19 +5,19 @@ border-style:ridge;
 border-collapse:separate;
 border-spacing:2px;
 border-width:5px;
-border-color: #00009B;
+border-color: #666666;
 }
 
 th.main_title {
 width: 100%;
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000;
 font-size: 16px;
 font-weight: 700;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 font-family: 'Russo One', sans-serif;
 font-effect: engrave;
 text-decoration: none;
@@ -27,14 +27,14 @@ text-shadow: -1px -1px 1px #fff, 1px 1px 1px #000;
 
 th.col_titles {
 /*width: 100%;*/
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000;
 font-size: 11px;
 font-weight: 700;
 border-width:5px;
 padding:1px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 font-family: 'Russo One', sans-serif;
 font-effect: engrave;
 text-decoration: none;
@@ -42,14 +42,14 @@ text-shadow: -1px -1px 1px #fff, 1px 1px 1px #000;
 }
 table.admin-dash td
 {
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000;
 font-size: 10px;
 font-weight: 700;
 border-width:5px;
 padding:1px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 }
 
 div.csds-dash-widget{
