--- a/css/user-reg-aide-style.css
+++ b/css/user-reg-aide-style.css
@@ -28,14 +28,14 @@
 
 table.adminPage th{
 width: 50%;
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000;
 font-size: 16px;
 font-weight: 700;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 font-family: 'Russo One', sans-serif;
 font-effect: engrave;
 text-decoration: none;
@@ -44,14 +44,14 @@ text-shadow: -1px -1px 1px #fff, 1px 1px 1px #000;
 
 table.adminPageMenu th {
 width: 25%;
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000;
 font-size: 16px;
 font-weight: 500;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 
 }
 
@@ -77,7 +77,7 @@ border-style:ridge;
 border-collapse:separate;
 border-spacing:5px;
 border-width:5px;
-border-color: #00009B;
+border-color: #666666;
 }
 
 table.adminPageMenu
@@ -89,7 +89,7 @@ margin-right:1%;
 border-collapse:separate;
 border-spacing:5px;
 border-width:5px;
-border-color: #00009B;*/
+border-color: #666666;*/
 }
 
 .adminPageMenu a:link
@@ -112,7 +112,7 @@ text-decoration: underline;
 
 .adminPageMenu a:visited
 {
-color:#000066;
+color:#666666;
 text-decoration: none;
 }
 
@@ -125,7 +125,7 @@ border-style:ridge;
 border-collapse:separate;
 border-spacing:5px;
 border-width:5px;
-border-color: #00009B;
+border-color: #666666;
 }
 
 
@@ -138,20 +138,20 @@ border-style:ridge;
 border-collapse:separate;
 border-spacing:5px;
 border-width:5px;
-border-color: #00009B;
+border-color: #666666;
 }
 
 table.editNewFields th
 {
 width: 33.3%;
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000;
 font-size: 16px;
 font-weight: 700;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 font-family: 'Russo One', sans-serif;
 font-effect: engrave;
 text-decoration: none;
@@ -167,7 +167,7 @@ border-style:ridge;
 border-collapse:separate;
 border-spacing:5px;
 border-width:5px;
-border-color: #00009B;
+border-color: #666666;
 }
 
 
@@ -180,7 +180,7 @@ border-style:ridge;
 border-collapse:separate;
 border-spacing:5px;
 border-width:5px;
-border-color: #00009B;
+border-color: #666666;
 }
 
 table.newFields2
@@ -192,46 +192,46 @@ border-style:ridge;
 border-collapse:separate;
 border-spacing:5px;
 border-width:5px;
-border-color: #00009B;
+border-color: #666666;
 }
 
 table.newFields2 th{
 width: 33.3%;
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000;
 font-size: 16px;
 font-weight: 700;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 text-align: center;
 }
 
 
 table.newFields1 td
 {
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000;
 font-size: 16px;
 font-weight: 700;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 
 }
 
 table.newFields1 th{
 width: 33.3%;
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000;
 font-size: 16px;
 font-weight: 700;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 font-family: 'Russo One', sans-serif;
 font-effect: engrave;
 text-decoration: none;
@@ -241,28 +241,28 @@ text-align: center;
 
 table.newFields td
 {
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000;
 font-size: 16px;
 font-weight: 700;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 
 }
 
 table.newFields th
 {
 width: 33.3%;
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000;
 font-size: 16px;
 font-weight: 700;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 font-family: 'Russo One', sans-serif;
 font-effect: engrave;
 text-decoration: none;
@@ -278,7 +278,7 @@ border-style:ridge;
 border-collapse:separate;
 border-spacing:5px;
 border-width:5px;
-border-color: #00009B;
+border-color: #666666;
 }
 
 table.refForm
@@ -290,7 +290,7 @@ border-style:ridge;
 border-collapse:separate;
 border-spacing:5px;
 border-width:5px;
-border-color: #00009B;
+border-color: #666666;
 }
 
 table.adminPage_Dash 
@@ -302,32 +302,32 @@ border-style:ridge;
 border-collapse:separate;
 border-spacing:5px;
 border-width:5px;
-border-color: #00009B;
+border-color: #666666;
 }
 
 table.adminPage_Dash td
 {
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000;
 font-size: 12px;
 font-weight: 500;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 }
 
 table.adminPage_Dash th
 {
 width: 50%;
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000;
 font-size: 16px;
 font-weight: 700;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 font-family: 'Russo One', sans-serif;
 font-effect: engrave;
 text-decoration: none;
@@ -341,26 +341,26 @@ height: 85px;
 
 table.regForm td
 {
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000;
 font-size: 12px;
 font-weight: 700;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 }
 
 table.regForm th{
 width: 50%;
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000;
 font-size: 16px;
 font-weight: 700;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 font-family: 'Russo One', sans-serif;
 font-effect: engrave;
 text-decoration: none;
@@ -416,7 +416,7 @@ table.adminPage td
 border-width:1px;
 padding:1px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 }
 
 table.csds_support
@@ -428,32 +428,32 @@ border-style:ridge;
 border-collapse:separate;
 border-spacing:5px;
 border-width:5px;
-border-color: #00009B;
+border-color: #666666;
 }
 
 table.csds_support td
 {
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000;
 font-size: 12px;
 font-weight: 700;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 text-align: center;
 }
 
 table.csds_support th
 {
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000 !important;
 font-size: 16px;
 font-weight: 900;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 font-family: 'Russo One', sans-serif;
 font-effect: engrave;
 text-decoration: none;
@@ -476,19 +476,19 @@ text-decoration: underline !important;
 h4.uraH4
 {
 text-align: center;
-background-color: #33ffff;
+background-color: #CCCCFF;
 color: #000000;
 font-weight: 800;
 font-size: 16px;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 }
 
 h4.regForm
 {
-background-color: #33FFFF !important;
+background-color: #CCCCFF !important;
 text-align: center;
 color: #000000;
 font-size: 16px;
@@ -500,7 +500,7 @@ text-shadow: -1.5px -1.5px 1.5px #fff, 1.5px 1.5px 1.5px #000;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 }
 
 h3.uraH3
@@ -512,7 +512,7 @@ font-weight: 900;
 
 h3.adminPage
 {
-background-color: #33FFFF;
+background-color: #CCCCFF;
 text-align: center;
 color: #000000;
 }
@@ -526,7 +526,7 @@ font-weight: 700;
 
 h2.adminPage
 {
-background-color: #33FFFF;
+background-color: #CCCCFF;
 text-align: center;
 color: #000000;
 font-weight: 700;
@@ -537,19 +537,19 @@ text-shadow: -1.5px -1.5px 1.5px #fff, 1.5px 1.5px 1.5px #000;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 }
 
 p.adminPage
 {
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000;
 font-size: 16px;
 font-weight: 700;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 font-family: 'Russo One', sans-serif;
 font-effect: engrave;
 text-decoration: none;
@@ -558,26 +558,26 @@ text-shadow: -1px -1px 1px #fff, 1px 1px 1px #000;
 
 p.editFields
 {
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000;
 font-size: 16px;
 font-weight: 700;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 }
 
 p.deleteFields
 {
-background-color: #33FFFF;
+background-color: #CCCCFF;
 color: #000000;
 font-size: 16px;
 font-weight: 700;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 
 }
 
@@ -586,7 +586,7 @@ p.adminPage select
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 border-radius: 5;
 }
 
@@ -595,7 +595,7 @@ select.fieldOrder
 border-width:5px;
 padding:2px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 border-radius: 5;
 line-height: 1;
 height: 31px;
@@ -606,7 +606,7 @@ select.deleteFields
 border-width:5px;
 padding:2px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 border-radius: 5;
 line-height: 1;
 height: 100px;
@@ -643,7 +643,7 @@ font-weight: 700;
 
 div.stuffbox
 {
-background-color: #33FFFF !important;
+background-color: #CCCCFF !important;
 text-align: center;
 color: #000000;
 /*font-size: 16px;
@@ -656,12 +656,12 @@ text-shadow: -1.0px -1.0px 1.0px #fff, 1.0px 1.0px 1.0px #000;
 border-width:5px;
 padding:5px;
 border-style:ridge;
-border-color: #00009B;
+border-color: #666666;
 }
 
 span.regForm
 {
-background-color: #33FFFF !important;
+background-color: #CCCCFF !important;
 text-align: center;
 color: #000000;
 font-size: 16px;
